; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgb/common/extr_cxgb_ael1002.c_ael100x_txon.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgb/common/extr_cxgb_ael1002.c_ael100x_txon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cphy = type { i64, i32 }

@F_GPIO7_OUT_VAL = common dso_local global i32 0, align 4
@F_GPIO2_OUT_VAL = common dso_local global i32 0, align 4
@A_T3DBG_GPIO_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cphy*)* @ael100x_txon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ael100x_txon(%struct.cphy* %0) #0 {
  %2 = alloca %struct.cphy*, align 8
  %3 = alloca i32, align 4
  store %struct.cphy* %0, %struct.cphy** %2, align 8
  %4 = load %struct.cphy*, %struct.cphy** %2, align 8
  %5 = getelementptr inbounds %struct.cphy, %struct.cphy* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @F_GPIO7_OUT_VAL, align 4
  br label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @F_GPIO2_OUT_VAL, align 4
  br label %12

12:                                               ; preds = %10, %8
  %13 = phi i32 [ %9, %8 ], [ %11, %10 ]
  store i32 %13, i32* %3, align 4
  %14 = call i32 @msleep(i32 100)
  %15 = load %struct.cphy*, %struct.cphy** %2, align 8
  %16 = getelementptr inbounds %struct.cphy, %struct.cphy* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = load i32, i32* @A_T3DBG_GPIO_EN, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @t3_set_reg_field(i32 %17, i32 %18, i32 0, i32 %19)
  %21 = call i32 @msleep(i32 30)
  ret void
}

declare dso_local i32 @msleep(i32) #1

declare dso_local i32 @t3_set_reg_field(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
